--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon",
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "migrate": "knex migrate:latest",
-    "seed": "knex seed:run",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "rollback": "knex migrate:rollback",
+    "migrateh": "heroku run knex migrate:latest -a quizmaster-prototype",
+    "rollbackh": "heroku run knex migrate:rollback -a quizmaster-prototype",
+    "heroku-postbuild": "cd client && npm i && npm run build",
+    "seed": "knex seed:run"
+  },
+  "engines": {
+    "node": "14.15.4",
+    "npm": "6.14.11"
   },
   "repository": {
     "type": "git",
@@ -30,8 +37,8 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.17",
     "knex-cleaner": "^1.3.1",
-    "pg": "^8.5.1",
-    "sqlite3": "^5.0.0"
+    "node": "^15.7.0",
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
