--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,6 @@
 {
   "name": "client",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
@@ -11,9 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-react-jsx": "^7.12.12",
     "axios": "^0.21.1",
+    "babel-loader": "^8.2.2",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.1",
     "preact": "^10.5.12",
-    "react-markdown": "^5.0.3"
+    "react-markdown": "^5.0.3",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
